--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         /></a>
       </section>
       <section class="title">
-        <h1>Comming Soon.....</h1>
+        <h1>Coming Soon.....</h1>
       </section>
       <section class="social-links">
         <a href="https://www.facebook.com/emergina1" target="_blank"
